@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-2-0-4
+DATE: 11/21/2014
+STAFF: lec
+CHANGES:
+a) TR11863/GO_stats.py
+
 TAG: qcreports_db-5-2-0-3
 DATE: 11/18/2014
 STAFF: lec
